force-app/main/default/objects/Opportunity/fields/Expired_Date_Sertifikat__c.field-meta.xml
<CustomField>
    <fullName>Expired_Date_Sertifikat__c</fullName>
    <label>Expired Date Sertifikat</label>
    <type>Date</type>
</CustomField>