force-app/main/default/objects/Opportunity/fields/Export_Limitation_Period__c.field-meta.xml
<CustomField>
    <fullName>Export_Limitation_Period__c</fullName>
    <label>Export Limitation Period</label>
    <type>Date</type>
</CustomField>