force-app/main/default/objects/Opportunity/fields/facultative__c.field-meta.xml
<CustomField>
    <fullName>facultative__c</fullName>
    <label>Facultative Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facultative Proportional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>