force-app/main/default/objects/Opportunity/fields/Facultative_Slip_Number__c.field-meta.xml
<CustomField>
    <fullName>Facultative_Slip_Number__c</fullName>
    <label>Facultative Slip Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>