force-app/main/default/objects/Opportunity/fields/Facultative_SOO__c.field-meta.xml
<CustomField>
    <fullName>Facultative_SOO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facultative SOO</label>
    <referenceTo>Transaction_Data__c</referenceTo>
    <relationshipLabel>Opportunities (Facultative SOO)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>