force-app/main/default/objects/Opportunity/fields/Facultative_Status__c.field-meta.xml
<CustomField>
    <fullName>Facultative_Status__c</fullName>
    <label>Facultative Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facultative Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>