force-app/main/default/objects/Opportunity/fields/Finance_Commission_PCT__c.field-meta.xml
<CustomField>
    <fullName>Finance_Commission_PCT__c</fullName>
    <description>Derived from Coverage</description>
    <label>Finance Commission PCT</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>