force-app/main/default/objects/Opportunity/fields/Flag_Restrukturisasi__c.field-meta.xml
<CustomField>
    <fullName>Flag_Restrukturisasi__c</fullName>
    <label>Flag Restrukturisasi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>