force-app/main/default/objects/Opportunity/fields/Frequency_Customer_RO__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Customer_RO__c</fullName>
    <label>Frequency Customer RO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>