force-app/main/default/objects/Opportunity/fields/Handling_Fee__c.field-meta.xml
<CustomField>
    <fullName>Handling_Fee__c</fullName>
    <label>Handling Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>