force-app/main/default/objects/Opportunity/fields/Highest_Exposure_BFI__c.field-meta.xml
<CustomField>
    <fullName>Highest_Exposure_BFI__c</fullName>
    <label>Highest Exposure BFI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>