force-app/main/default/objects/Opportunity/fields/Highest_Installment_BFI__c.field-meta.xml
<CustomField>
    <fullName>Highest_Installment_BFI__c</fullName>
    <label>Highest Installment BFI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>