force-app/main/default/objects/Opportunity/fields/Incoming_Request_Approval__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Request_Approval__c</fullName>
    <label>Opportunity / Quotation Approval</label>
    <type>DateTime</type>
</CustomField>