force-app/main/default/objects/Opportunity/fields/Indemnity_Agreement_No__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Agreement_No__c</fullName>
    <label>Indemnity Agreement No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>