force-app/main/default/objects/Opportunity/fields/Indemnity_Period__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Period__c</fullName>
    <label>Indemnity Period</label>
    <type>TextArea</type>
</CustomField>