force-app/main/default/objects/Opportunity/fields/Insurance_Endorsdate__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Endorsdate__c</fullName>
    <label>Insurance Endorsedate</label>
    <type>Date</type>
</CustomField>