force-app/main/default/objects/Opportunity/fields/Insurance_Period_Check__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Period_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Period Check</label>
    <type>Checkbox</type>
</CustomField>