force-app/main/default/objects/Opportunity/fields/Insurance_Period_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Period_Type__c</fullName>
    <label>Insurance Period Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Annual</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Short</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Long Term</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>