force-app/main/default/objects/Opportunity/fields/Insurance_Policy_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_Coverage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Policy Coverage</label>
    <referenceTo>InsurancePolicyCoverage</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>