force-app/main/default/objects/Opportunity/fields/INT_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>INT_Created_Date__c</fullName>
    <label>INT Created Date</label>
    <type>Date</type>
</CustomField>