force-app/main/default/objects/Opportunity/fields/Interest_Insured_Material_Damage__c.field-meta.xml
<CustomField>
    <fullName>Interest_Insured_Material_Damage__c</fullName>
    <label>Interest Insured Material Damage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>