force-app/main/default/objects/Opportunity/fields/Is_Current_User_Same_As_Creator__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_User_Same_As_Creator__c</fullName>
    <formula>IF(
  ISBLANK(Federated_Fullname__c),
  ($User.FirstName &amp; &quot; &quot; &amp; $User.LastName) = Input_By__c,
  $User.FederationIdentifier =   Federated_Owner__r.FederationIdentifier
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current User Same As Creator</label>
    <type>Checkbox</type>
</CustomField>