force-app/main/default/objects/Opportunity/fields/Is_Endorsed__c.field-meta.xml
<CustomField>
    <fullName>Is_Endorsed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Endorsed</label>
    <type>Checkbox</type>
</CustomField>