force-app/main/default/objects/Opportunity/fields/Is_From_LMS__c.field-meta.xml
<CustomField>
    <fullName>Is_From_LMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is From LMS</label>
    <type>Checkbox</type>
</CustomField>