force-app/main/default/objects/Opportunity/fields/Is_Installment__c.field-meta.xml
<CustomField>
    <fullName>Is_Installment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Installment</label>
    <type>Checkbox</type>
</CustomField>