force-app/main/default/objects/Opportunity/fields/is_KYC_Account__c.field-meta.xml
<CustomField>
    <fullName>is_KYC_Account__c</fullName>
    <formula>IF(
	AND(
		NOT(ISBLANK(AccountId)),
		NOT(Account.Is_General__c),
		OR(
			Account.Prioritized__c = TRUE,
			ISPICKVAL(Account.Type, &quot;0&quot;),
			ISPICKVAL(Account.Type, &quot;1&quot;),
			ISPICKVAL(Account.Type, &quot;2&quot;),
			ISPICKVAL(Account.Type, &quot;3&quot;),
			ISPICKVAL(Account.Type, &quot;4&quot;)
		)
	),
	1,
	0
)
+
IF(
	AND(
		NOT(ISBLANK(The_Insured_Name__c)),
		NOT(The_Insured_Name__r.Is_General__c),
		OR(
			The_Insured_Name__r.Prioritized__c = TRUE,
			ISPICKVAL(The_Insured_Name__r.Type, &quot;0&quot;),
			ISPICKVAL(The_Insured_Name__r.Type, &quot;1&quot;),
			ISPICKVAL(The_Insured_Name__r.Type, &quot;2&quot;),
			ISPICKVAL(The_Insured_Name__r.Type, &quot;3&quot;),
			ISPICKVAL(The_Insured_Name__r.Type, &quot;4&quot;)
		)
	),
	1,
	0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is KYC Account</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>