force-app/main/default/objects/Opportunity/fields/is_psakbi__c.field-meta.xml
<CustomField>
    <fullName>is_psakbi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is psakbi</label>
    <type>Checkbox</type>
</CustomField>