force-app/main/default/objects/Opportunity/fields/Is_Reject_Final__c.field-meta.xml
<CustomField>
    <fullName>Is_Reject_Final__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Reject_Final</label>
    <type>Checkbox</type>
</CustomField>