force-app/main/default/objects/Opportunity/fields/isCaReco__c.field-meta.xml
<CustomField>
    <fullName>isCaReco__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Apakah CA Cabang sudah Recomend?</description>
    <label>isCaReco</label>
    <type>Checkbox</type>
</CustomField>