force-app/main/default/objects/Opportunity/fields/isOwner__c.field-meta.xml
<CustomField>
    <fullName>isOwner__c</fullName>
    <formula>IF ($User.Id = OwnerId || $Profile.Name = &apos;System Administrator&apos;, TRUE, FALSE)</formula>
    <label>Is Owner</label>
    <type>Checkbox</type>
</CustomField>