force-app/main/default/objects/Opportunity/fields/isOwnerChange__c.field-meta.xml
<CustomField>
    <fullName>isOwnerChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isOwnerChange</label>
    <type>Checkbox</type>
</CustomField>