force-app/main/default/objects/Opportunity/fields/Jadwal_Janji_Survey__c.field-meta.xml
<CustomField>
    <fullName>Jadwal_Janji_Survey__c</fullName>
    <label>Jadwal Janji Survey</label>
    <type>DateTime</type>
</CustomField>