force-app/main/default/objects/Opportunity/fields/Jenis_Fasilitas_Kredit__c.field-meta.xml
<CustomField>
    <fullName>Jenis_Fasilitas_Kredit__c</fullName>
    <label>Jenis Fasilitas Kredit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>