force-app/main/default/objects/Opportunity/fields/Kelas_Konstruksi_Text__c.field-meta.xml
<CustomField>
    <fullName>Kelas_Konstruksi_Text__c</fullName>
    <label>Kelas Konstruksi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>