force-app/main/default/objects/Opportunity/fields/KK1_Assigned__c.field-meta.xml
<CustomField>
    <fullName>KK1_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Komite Survey 1 - Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities_KK1</relationshipName>
    <type>Lookup</type>
</CustomField>