force-app/main/default/objects/Opportunity/fields/KK2_Assigned__c.field-meta.xml
<CustomField>
    <fullName>KK2_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Komite Survey 2 - Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities_KK2</relationshipName>
    <type>Lookup</type>
</CustomField>