force-app/main/default/objects/Opportunity/fields/Kode_Sifat_Kredit__c.field-meta.xml
<CustomField>
    <fullName>Kode_Sifat_Kredit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kode Sifat Kredit</label>
    <referenceTo>Master_Kode_Sifat_Kredit__c</referenceTo>
    <relationshipLabel>Loan Informations</relationshipLabel>
    <relationshipName>Loan_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>