force-app/main/default/objects/Opportunity/fields/Kolektabilitas_Pembayaran_Take_Over__c.field-meta.xml
<CustomField>
    <fullName>Kolektabilitas_Pembayaran_Take_Over__c</fullName>
    <label>Kolektabilitas Pembayaran Take Over</label>
    <length>255</length>
    <type>Text</type>
</CustomField>