force-app/main/default/objects/Opportunity/fields/Komite_Kredit_1_ApprovedBy__c.field-meta.xml
<CustomField>
    <fullName>Komite_Kredit_1_ApprovedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Komite Survey 1 - ApprovedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loan_Informations_Komite_Kredit_1_Approv</relationshipName>
    <type>Lookup</type>
</CustomField>