force-app/main/default/objects/Opportunity/fields/Komite_Kredit_1_ApprovedDt__c.field-meta.xml
<CustomField>
    <fullName>Komite_Kredit_1_ApprovedDt__c</fullName>
    <label>Komite Survey 1 - ApprovedDt</label>
    <type>DateTime</type>
</CustomField>