force-app/main/default/objects/Opportunity/fields/Komite_Kredit_1_Notes__c.field-meta.xml
<CustomField>
    <fullName>Komite_Kredit_1_Notes__c</fullName>
    <label>Komite Survey 1 - Notes</label>
    <type>TextArea</type>
</CustomField>