force-app/main/default/objects/Opportunity/fields/Komite_Survey_2_Result__c.field-meta.xml
<CustomField>
    <fullName>Komite_Survey_2_Result__c</fullName>
    <label>Komite Survey 2 - Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>