force-app/main/default/objects/Opportunity/fields/Komite_Survey_5_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Komite_Survey_5_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Komite Survey 5 - Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loan_Informations9</relationshipName>
    <type>Lookup</type>
</CustomField>