force-app/main/default/objects/Opportunity/fields/Kontrak_Take_Over_Atas_Nama__c.field-meta.xml
<CustomField>
    <fullName>Kontrak_Take_Over_Atas_Nama__c</fullName>
    <label>Kontrak Take Over Atas Nama</label>
    <length>255</length>
    <type>Text</type>
</CustomField>