force-app/main/default/objects/Opportunity/fields/LAO_ApprovedBy__c.field-meta.xml
<CustomField>
    <fullName>LAO_ApprovedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LAO By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loan_Informations5</relationshipName>
    <type>Lookup</type>
</CustomField>