force-app/main/default/objects/Opportunity/fields/LAO_Result__c.field-meta.xml
<CustomField>
    <fullName>LAO_Result__c</fullName>
    <label>LAO Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>