force-app/main/default/objects/Opportunity/fields/Lead_and_Referral__c.field-meta.xml
<CustomField>
    <fullName>Lead_and_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead and Referral</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>