force-app/main/default/objects/Opportunity/fields/Leader_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Leader_Policy_Number__c</fullName>
    <label>Leader Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>