force-app/main/default/objects/Opportunity/fields/Leasings_Fee__c.field-meta.xml
<CustomField>
    <fullName>Leasings_Fee__c</fullName>
    <description>Derived from Coverage</description>
    <label>Leasing&apos;s Fee</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>