force-app/main/default/objects/Opportunity/fields/Lembaga_LJK_New__c.field-meta.xml
<CustomField>
    <fullName>Lembaga_LJK_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lembaga LJK</label>
    <referenceTo>Master_Financial_Company__c</referenceTo>
    <relationshipLabel>Loan Informations</relationshipLabel>
    <relationshipName>Loan_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>