force-app/main/default/objects/Opportunity/fields/Link2__c.field-meta.xml
<CustomField>
    <fullName>Link2__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id , Name , &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link2</label>
    <type>Text</type>
</CustomField>