force-app/main/default/objects/Opportunity/fields/Lintaswata_Rate__c.field-meta.xml
<CustomField>
    <fullName>Lintaswata_Rate__c</fullName>
    <label>Lintaswata Rate</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>