force-app/main/default/objects/Opportunity/fields/Lintaswata_Sum_Insured__c.field-meta.xml
<CustomField>
    <fullName>Lintaswata_Sum_Insured__c</fullName>
    <label>Lintaswata Sum Insured</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>