force-app/main/default/objects/Opportunity/fields/Lintaswata_Sync__c.field-meta.xml
<CustomField>
    <fullName>Lintaswata_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>data terakhir yang ada dari lintaswata, jika true maka data realisasi</description>
    <label>Lintaswata Sync</label>
    <type>Checkbox</type>
</CustomField>