force-app/main/default/objects/Opportunity/fields/LMS_Agreement_Id__c.field-meta.xml
<CustomField>
    <fullName>LMS_Agreement_Id__c</fullName>
    <label>LMS Agreement Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>