force-app/main/default/objects/Opportunity/fields/Loan_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Status__c</fullName>
    <label>Loan Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>