force-app/main/default/objects/Opportunity/fields/Maksimal_Past_Due_Days__c.field-meta.xml
<CustomField>
    <fullName>Maksimal_Past_Due_Days__c</fullName>
    <label>Maksimal Past Due Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>