force-app/main/default/objects/Opportunity/fields/Marketer_ID__c.field-meta.xml
<CustomField>
    <fullName>Marketer_ID__c</fullName>
    <formula>Owner.NIK__c</formula>
    <label>Marketer_ID</label>
    <type>Text</type>
</CustomField>