force-app/main/default/objects/Opportunity/fields/Max_past_due_days__c.field-meta.xml
<CustomField>
    <fullName>Max_past_due_days__c</fullName>
    <label>Max past due days</label>
    <length>255</length>
    <type>Text</type>
</CustomField>