force-app/main/default/objects/Opportunity/fields/Maximum__c.field-meta.xml
<CustomField>
    <fullName>Maximum__c</fullName>
    <inlineHelpText>Month</inlineHelpText>
    <label>Maximum</label>
    <length>20</length>
    <type>Text</type>
</CustomField>