force-app/main/default/objects/Opportunity/fields/Name_of_Company__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Name of Company)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>