force-app/main/default/objects/Opportunity/fields/Nominal_Facultative__c.field-meta.xml
<CustomField>
    <fullName>Nominal_Facultative__c</fullName>
    <label>Nominal Facultative</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>