force-app/main/default/objects/Opportunity/fields/Nomor_Surat_Edaran__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Surat_Edaran__c</fullName>
    <label>Nomor Surat Edaran</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>