force-app/main/default/objects/Opportunity/fields/Non_Prop_Curr_tobedeleted__c.field-meta.xml
<CustomField>
    <fullName>Non_Prop_Curr_tobedeleted__c</fullName>
    <label>Non Prop Curr_tobedeleted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>