force-app/main/default/objects/Opportunity/fields/Number_of_Years__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Years__c</fullName>
    <label>Number of Years</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>