force-app/main/default/objects/Opportunity/fields/Occupation_Type__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Type__c</fullName>
    <label>Occupation Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>