force-app/main/default/objects/Opportunity/fields/Offered_TSI_LOL_Amount_tobedeleted__c.field-meta.xml
<CustomField>
    <fullName>Offered_TSI_LOL_Amount_tobedeleted__c</fullName>
    <label>Offered TSI LOL Amount_tobedelete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>