force-app/main/default/objects/Opportunity/fields/Offering_Info_tobedeleted__c.field-meta.xml
<CustomField>
    <fullName>Offering_Info_tobedeleted__c</fullName>
    <label>Offering Info_tobedeleted</label>
    <type>TextArea</type>
</CustomField>