force-app/main/default/objects/Opportunity/fields/Offering_Number__c.field-meta.xml
<CustomField>
    <fullName>Offering_Number__c</fullName>
    <label>Offering Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>