force-app/main/default/objects/Opportunity/fields/Offering_status__c.field-meta.xml
<CustomField>
    <fullName>Offering_status__c</fullName>
    <label>Offering status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Slip Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>