force-app/main/default/objects/Opportunity/fields/Office_Teritory__c.field-meta.xml
<CustomField>
    <fullName>Office_Teritory__c</fullName>
    <formula>TEXT( Owner.Branch__c )</formula>
    <label>Branch Territory</label>
    <type>Text</type>
</CustomField>