force-app/main/default/objects/Opportunity/fields/Open_Cover_Slip_Id_tobedeleted__c.field-meta.xml
<CustomField>
    <fullName>Open_Cover_Slip_Id_tobedeleted__c</fullName>
    <label>Open Cover Slip Id_tobedeleted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>