force-app/main/default/objects/Opportunity/fields/Operation_Remarks_for_Underwriting__c.field-meta.xml
<CustomField>
    <fullName>Operation_Remarks_for_Underwriting__c</fullName>
    <label>Operation Remarks for Underwriting</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>